link with youtube api

--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -6,4 +6,18 @@
 
 #player > .embeded {
   align-self: center;
+  width: 100%;
+  text-align: center;
+}
+
+.embeded > iframe {
+  max-width: 100%;
+  max-height: 405px;
+}
+
+/* Bigger devices */
+@media only screen and (min-width: 1000px) {
+  #player {
+    padding-right: 24px;
+  }
 }
