--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -4,13 +4,17 @@
   margin-bottom: 8px;
 }
 
-#player > .embeded {
+#player .ytp-spinner {
+  padding-top: 56.25%;
+}
+
+#player .embeded {
   align-self: center;
   width: 100%;
   text-align: center;
 }
 
-.embeded > iframe {
+.embeded iframe {
   max-width: 100%;
   max-height: 405px;
 }
